# focalpy

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api.md  conf.py  environment.yml  index.md  overview.ipynb  planned-features.md  references.bib  references.rst  usage.md
docs/user-guide/: a01-data.ipynb  introduction.ipynb  introduction.md  land-use-regression.ipynb  landscape-species-inference.ipynb  spatial-predictors.ipynb
focalpy/: __init__.py  core.py  features.py  landscape_metrics.py  scale.py  scale_of_effect.py  settings.py  terrain_attributes.py  urban_morphometrics.py  utils.py
multilandpy/: __init__.py  features.py
tests/: test_focalpy.py
